fix: use correct default branch name

--- a/.github/actions/release/action.yml
+++ b/.github/actions/release/action.yml
@@ -13,7 +13,7 @@ runs:
         fi
       shell: bash
     - name: 'Release: Push release to repository'
-      run: git push --follow-tags origin master
+      run: git push --follow-tags origin main
       shell: bash
     - name: 'Release: Determine npm tag'
       id: npm_tag
