--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,17 @@
 name: Release
 on:
   push:
-    branches: [main]
+    branches:
+      - 'main'
 
 jobs:
   release:
     runs-on: ubuntu-latest
     if: >
-      github.event.workflow_run.event == 'push' &&
-      github.event.workflow_run.conclusion == 'success' &&
       (
-        startsWith(github.event.workflow_run.head_commit.message, 'feat') ||
-        startsWith(github.event.workflow_run.head_commit.message, 'fix') ||
-        startsWith(github.event.workflow_run.head_commit.message, 'refactor')
+        startsWith(github.event.head_commit.message, 'feat') ||
+        startsWith(github.event.head_commit.message, 'fix') ||
+        startsWith(github.event.head_commit.message, 'refactor')
       )
     steps:
       - uses: actions/checkout@v3
