--- a/.github/workflows/figma-publish.yml
+++ b/.github/workflows/figma-publish.yml
@@ -34,6 +34,8 @@ jobs:
           git commit -m "$MESSAGE"
         env:
           MESSAGE: ${{ github.event.client_payload.description }}
+      - name: Ensure latest branch state
+        run: git pull --rebase
 
       - name: Release
         uses: ./.github/actions/release
