--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          await github.rest.actions.createDispatchEvent({
+          await github.rest.repos.createDispatchEvent({
               owner: context.repo.owner,
               repo: 'digital.sbb.ch',
               event_type: 'build-and-deploy',
