--- a/.github/actions/release/action.yml
+++ b/.github/actions/release/action.yml
@@ -58,8 +58,9 @@ runs:
     - name: Dispatch digital.sbb.ch build
       uses: actions/github-script@v6
       with:
+        github-token: ${{ secrets.DISPATCH_TOKEN }}
         script: |
-          await github.rest.actions.createDispatchEvent({
+          await github.rest.repos.createDispatchEvent({
               owner: context.repo.owner,
               repo: 'digital.sbb.ch',
               event_type: 'build-and-deploy',
