build: update digital.sbb.ch on release (#5)
This PR adds a step to the release action to trigger the digital.sbb.ch repository dispatch workflow.

--- a/.github/actions/release/action.yml
+++ b/.github/actions/release/action.yml
@@ -54,3 +54,14 @@ runs:
       env:
         S3BUCKET: 
       shell: bash
+
+    - name: Dispatch digital.sbb.ch build
+      uses: actions/github-script@v6
+      with:
+        github-token: ${{ secrets.DISPATCH_TOKEN }}
+        script: |
+          await github.rest.repos.createDispatchEvent({
+              owner: context.repo.owner,
+              repo: 'digital.sbb.ch',
+              event_type: 'build-and-deploy',
+          })
