--- a/.github/workflows/figma-publish.yml
+++ b/.github/workflows/figma-publish.yml
@@ -25,14 +25,15 @@ jobs:
   release:  
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          cache: 'yarn'
+          node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
           scope: sbb-esta
-      - name: Yarn Install
-        uses: ./.github/actions/yarn-install
+      - name: 'Yarn: Install dependencies'
+        run: yarn install --frozen-lockfile --non-interactive
 
       - name: 'Release: Set git user'
         run: |
