--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,14 +15,15 @@ jobs:
         contains(github.event.head_commit.message, '!release')
       )
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          cache: 'yarn'
+          node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
           scope: sbb-esta
-      - name: Yarn Install
-        uses: ./.github/actions/yarn-install
+      - name: 'Yarn: Install dependencies'
+        run: yarn install --frozen-lockfile --non-interactive
       - name: 'Release: Set git user'
         run: |
           git config --global user.name 'github-actions'
