--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
   "es2017": "./icons/index.mjs",
   "typings": "./icons/index.d.ts",
   "devDependencies": {
-    "@types/node": "18.0.3",
-    "@types/svgo": "2.6.3",
+    "@types/node": "20.14.2",
+    "@types/svgo": "3.0.0",
+    "commit-and-tag-version": "12.4.1",
     "figma-js": "1.15.0",
-    "node-fetch": "3.2.6",
     "octokit": "2.0.3",
-    "standard-version": "9.5.0",
-    "svgo": "2.8.0",
-    "tsx": "3.7.1",
-    "typescript": "4.7.4"
+    "svgo": "3.3.2",
+    "tsx": "4.15.6",
+    "typescript": "5.4.5"
   },
   "files": [
     "icons"
@@ -37,7 +36,7 @@
     "access": "public"
   },
   "type": "module",
-  "standard-version": {
+  "commit-and-tag-version": {
     "bumpFiles": [
       {
         "filename": "package.json",
