build: refactor release process

--- a/.github/workflows/figma-publish.yml
+++ b/.github/workflows/figma-publish.yml
@@ -59,11 +59,7 @@ jobs:
           git commit -m "$MESSAGE"
       - name: Ensure latest branch state
         run: git pull --rebase
-
-      - name: Release
-        uses: ./.github/actions/release
-        with:
-          npm-token: ${{ secrets.NPM_TOKEN }}
-          aws-access-key-id: ${{ secrets.ICON_CDN_AWS_ACCESS_ID }}
-          aws-secret-access-key: ${{ secrets.ICON_CDN_AWS_ACCESS_KEY }}
-          github-token: ${{ secrets.DISPATCH_TOKEN }}
+      - name: 'Release: Create release with commit-and-tag-version'
+        run: yarn commit-and-tag-version
+      - name: 'Release: Push release to repository'
+        run: git push --follow-tags origin main
