--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,13 @@
 name: Release
 on:
   push:
-    branches:
-      - 'main'
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'v[0-9]+.[0-9]+.[0-9]+-*'
 
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: >
-      (
-        startsWith(github.event.head_commit.message, 'feat') ||
-        startsWith(github.event.head_commit.message, 'fix') ||
-        startsWith(github.event.head_commit.message, 'refactor') ||
-        contains(github.event.head_commit.message, '!release')
-      )
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -24,14 +18,37 @@ jobs:
           scope: sbb-esta
       - name: 'Yarn: Install dependencies'
         run: yarn install --frozen-lockfile --non-interactive
-      - name: 'Release: Set git user'
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-      - name: Release
-        uses: ./.github/actions/release
+          
+      - name: 'Release: Determine npm tag'
+        id: npm_tag
+        run: echo "npm_tag=$([[ "$VERSION" == *"-"* ]] && echo "next" || echo "latest")" >> $GITHUB_OUTPUT
+        env:
+          VERSION: ${{ github.ref }}
+        shell: bash
+      - name: 'Release: Publish @sbb-esta/icons'
+        run: yarn publish --tag ${{ steps.npm_tag.outputs.npm_tag }}
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          npm-token: ${{ secrets.NPM_TOKEN }}
           aws-access-key-id: ${{ secrets.ICON_CDN_AWS_ACCESS_ID }}
           aws-secret-access-key: ${{ secrets.ICON_CDN_AWS_ACCESS_KEY }}
+          aws-region: eu-central-1
+      - name: Upload icons and indexes to s3
+        run: aws s3 cp . s3://cloudfront-icon-cdn-backend-esta-web-prod --recursive --exclude "*" --include "icons/*.svg" --include "icons/index.json"
+        env:
+          S3BUCKET: 
+        shell: bash
+
+      - name: Dispatch digital.sbb.ch build
+        uses: actions/github-script@v6
+        with:
           github-token: ${{ secrets.DISPATCH_TOKEN }}
+          script: |
+            await github.rest.repos.createDispatchEvent({
+                owner: context.repo.owner,
+                repo: 'digital.sbb.ch',
+                event_type: 'build-and-deploy',
+            })
