build: refactor release process

--- a/.github/workflows/figma-publish.yml
+++ b/.github/workflows/figma-publish.yml
@@ -63,3 +63,11 @@ jobs:
         run: yarn commit-and-tag-version
       - name: 'Release: Push release to repository'
         run: git push --follow-tags origin main
+        
+      - name: Publish
+        uses: ./.github/actions/publish
+        with:
+          npm-token: ${{ secrets.NPM_TOKEN }}
+          aws-access-key-id: ${{ secrets.ICON_CDN_AWS_ACCESS_ID }}
+          aws-secret-access-key: ${{ secrets.ICON_CDN_AWS_ACCESS_KEY }}
+          github-token: ${{ secrets.DISPATCH_TOKEN }}
